# rseqc-redux

./: .gitignore  CHANGES.md  CLAUDE.md  README.md  data.json  endpoint.json  mkdocs.yml  noxfile.py  pyproject.toml
.github/workflows/: ci.yml  docs.yml  publish.yml
benchmark-data/: BENCHMARK_REPORT.md  benchmark_results.tsv  chr22.bam.bai  chr22.bed  run_benchmark.sh
docs/: changelog.md  contributing.md  index.md
docs/getting-started/: input-formats.md  installation.md
docs/tools/: FPKM_UQ.md  FPKM_count.md  RNA_fragment_size.md  RPKM_saturation.md  bam2fq.md  bam2wig.md  bam_stat.md  clipping_profile.md  deletion_profile.md  divide_bam.md  geneBody_coverage.md  geneBody_coverage2.md  index.md  infer_experiment.md  inner_distance.md  insertion_profile.md  junction_annotation.md  junction_saturation.md  mismatch_profile.md  normalize_bigwig.md  overlay_bigwig.md  read_GC.md  read_NVC.md  read_distribution.md  read_duplication.md  read_hexamer.md  read_quality.md  sc_bamStat.md  sc_editMatrix.md  sc_seqLogo.md  sc_seqQual.md  split_bam.md  split_paired_bam.md  tin.md
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_38e42723207c757e_BED_py.html  z_38e42723207c757e_FrameKmer_py.html  z_38e42723207c757e_SAM_py.html  z_38e42723207c757e___init___py.html  z_38e42723207c757e_annoGene_py.html  z_38e42723207c757e_bam_cigar_py.html  z_38e42723207c757e_changePoint_py.html  z_38e42723207c757e_cigar_py.html  z_38e42723207c757e_cli_common_py.html  z_38e42723207c757e_dotProduct_py.html  z_38e42723207c757e_fasta_py.html  z_38e42723207c757e_fastq_py.html  z_38e42723207c757e_getBamFiles_py.html  z_38e42723207c757e_heatmap_py.html  z_38e42723207c757e_ireader_py.html  z_38e42723207c757e_mystat_py.html  z_38e42723207c757e_orf_py.html  z_38e42723207c757e_quantile_py.html  z_38e42723207c757e_scbam_py.html  z_38e42723207c757e_twoList_py.html  z_38e42723207c757e_wiggle_py.html  z_de1a740d5dc98ffd_FPKM_UQ_py.html  z_de1a740d5dc98ffd_FPKM_count_py.html  z_de1a740d5dc98ffd_RNA_fragment_size_py.html  z_de1a740d5dc98ffd_RPKM_saturation_py.html  z_de1a740d5dc98ffd_bam2fq_py.html  z_de1a740d5dc98ffd_bam2wig_py.html  z_de1a740d5dc98ffd_bam_stat_py.html  z_de1a740d5dc98ffd_clipping_profile_py.html  z_de1a740d5dc98ffd_deletion_profile_py.html  z_de1a740d5dc98ffd_divide_bam_py.html  z_de1a740d5dc98ffd_geneBody_coverage2_py.html  z_de1a740d5dc98ffd_geneBody_coverage_py.html  z_de1a740d5dc98ffd_infer_experiment_py.html  z_de1a740d5dc98ffd_inner_distance_py.html  z_de1a740d5dc98ffd_insertion_profile_py.html  (+18 more)
qcmodule/: __init__.py
rseqc/: BED.py  FrameKmer.py  SAM.py  __init__.py  annoGene.py  bam_cigar.py  changePoint.py  cigar.py  cli_common.py  dotProduct.py  fasta.py  fastq.py  getBamFiles.py  heatmap.py  ireader.py  mystat.py  orf.py  quantile.py  scbam.py  twoList.py  wiggle.py
scripts/: FPKM_UQ.py  FPKM_count.py  RNA_fragment_size.py  RPKM_saturation.py  bam2fq.py  bam2wig.py  bam_stat.py  clipping_profile.py  deletion_profile.py  divide_bam.py  geneBody_coverage.py  geneBody_coverage2.py  infer_experiment.py  inner_distance.py  insertion_profile.py  junction_annotation.py  junction_saturation.py  mismatch_profile.py  normalize_bigwig.py  overlay_bigwig.py  read_GC.py  read_NVC.py  read_distribution.py  read_duplication.py  read_hexamer.py  read_quality.py  sc_bamStat.py  sc_editMatrix.py  sc_seqLogo.py  sc_seqQual.py  split_bam.py  split_paired_bam.py  tin.py
tests/: conftest.py  test_BED.py  test_FrameKmer.py  test_SAM.py  test_annoGene.py  test_bam_cigar.py  test_bugfixes.py  test_changePoint.py  test_cigar.py  test_cli_common.py  test_cli_help.py  test_cli_integration.py  test_cli_integration_extended.py  test_coverage_expansion.py  test_dotProduct.py  test_fasta.py  test_fastq.py  test_getBamFiles.py  test_heatmap.py  test_ireader.py  test_mystat.py  test_orf.py  test_quantile.py  test_read_distribution_detailed.py  test_saturation_junction.py  test_saturation_rpkm.py  test_scbam.py  test_script_helpers.py  test_script_helpers_extended.py  test_script_imports.py  test_script_main.py  test_split_bam.py  test_twoList.py  test_wiggle.py
tests/fixtures/: mini.bed  mini.chrom.sizes  mini.fa  mini.fq  mini.wig
